# pLDA

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
pLDA/pLDA.egg-info/: PKG-INFO  SOURCES.txt
posLDA/: pLDA.py
posLDA/pLDA.egg-info/: SOURCES.txt  requires.txt
posLDA/posLDA.egg-info/: PKG-INFO  SOURCES.txt
src/pLDA/: pLDA.py
