[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "posLDA"
version = "0.0.2"
authors = [
  { name="Martin McCullagh", email="martin.mccullagh@okstate.edu" },
]
description = "Linear Discriminant Analysis on Particle Positions"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/mccullaghlab/pLDA"
"Bug Tracker" = "https://github.com/mccullaghlab/pLDA/issues"
